# ZKLBS

./: .gitmodules  CMakeLists.txt  README.md
depends/: CMakeLists.txt
src/: CMakeLists.txt  circuit.cpp  circuit_example.cpp  poseidon.cpp  range.cpp
src/.build/circuit/: Makefile  cmake_install.cmake
src/.build/circuit/PoseidonClient_autogen/: moc_predefs.h
src/.build/circuit/PoseidonServer_autogen/: moc_predefs.h
src/.build/ethsnarks/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
src/.build/ethsnarks/depends/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/.build/ethsnarks/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/.build/ethsnarks/src/ethsnarks_common_autogen/: moc_predefs.h
src/.build/ethsnarks/src/gadgets/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/.build/ethsnarks/src/jubjub/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/.build/ethsnarks/src/pinocchio/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/.build/ethsnarks/src/r1cs_gg_ppzksnark_zok/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/.build/ethsnarks/src/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/.build/ethsnarks/src/test/benchmark/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/.build/ethsnarks/src/test/jubjub/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/.build/grpc/: Client2Server.grpc.pb.cc  Client2Server.pb.cc  Client2Verifier.grpc.pb.cc  Client2Verifier.pb.h  Makefile  Server2Verifier.grpc.pb.cc  Server2Verifier.grpc.pb.h  Server2Verifier.pb.cc  Server2Verifier.pb.h  cmake_install.cmake
src/.build/utils/: Makefile  cmake_install.cmake
src/.build/utils/CoordinateUtil_autogen/: moc_predefs.h
src/.build/utils/IpUtil_autogen/: moc_predefs.h
src/.build/utils/RandomUtil_autogen/: moc_predefs.h
src/.build/utils/TimeUtil_autogen/: moc_predefs.h
src/.build/utils/TypeUtil_autogen/: moc_predefs.h
src/ZKFront/: CMakeLists.txt
src/ZKFront/.build/circuit/: Makefile  cmake_install.cmake
src/ZKFront/.build/ethsnarks/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
src/ZKFront/.build/ethsnarks/depends/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ZKFront/.build/ethsnarks/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ZKFront/.build/ethsnarks/src/gadgets/: CTestTestfile.cmake  Makefile
src/ZKFront/.build/grpc/: Makefile
src/ZKFront/.build/utils/: Makefile
src/circuit/: CMakeLists.txt  PoseidonClient.cpp  PoseidonServer.cpp  RangeCircuit.cpp  circuit.cpp  circuit.h
src/config/: demand.yaml
src/front/: CMakeLists.txt  failwindow.cpp  failwindow.h  failwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  source.qrc  successwindow.cpp  successwindow.h  successwindow.ui
src/grpc/: CMakeLists.txt  client.cpp  client.h  greeterClient.cpp  greeterServer.cpp  greeterVerifier.cpp  greeterVerifier.h  server.cpp  server.h  verifier.cpp  verifier.h
src/grpc/protos/: Client2Server.proto  Client2Verifier.proto  Server2Verifier.proto  helloworld.proto
src/qt/client/: CMakeLists.txt  backwindow.cpp  backwindow.h  backwindow.ui  client.cpp  client.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/test/: CMakeLists.txt  test_ZKposeidon.cpp  test_poseidonHash.cpp  test_readYaml.cpp
src/utils/: CMakeLists.txt  CoordinateUtil.cpp  IpUtil.cpp  RandomUtil.cpp  TimeUtil.cpp  TypeUtil.cpp
(+15 files in other folders)
